# KindWordsApp

./: .gitignore  README.md  pyproject.toml
