[tool.poetry]
name = "kindwords"
version = "0.1.0"
description = ""
authors = ["Alex Oladele <dragid10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^1.57"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.2"

[tool.poetry.group.test.dependencies]
mockito = "^1.3.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-mockito = "0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
